Fixed vertical scrollbar appearing. More HTML5 updates. Removed phpMyAdmin link in admin section

--- a/css/default.css
+++ b/css/default.css
@@ -94,7 +94,6 @@ li {
 	padding-right: 0;
 	text-align: left;
 	margin-bottom: 1.5%;
-	width: 100%;
 	background: #000860;
 }
 .logoleft {
