--- a/css/megasis.css
+++ b/css/megasis.css
@@ -91,7 +91,7 @@ body {
 	border-right: 2px solid #1d1d8e;
 }
 .ucp_left li {
-	background-color: rgba(132,38,58,0.3);
+	background-color: rgba(38,38,204,0.3);
 }
 .ucp_title {
 	background-color: #1d1d8e !important;
